Begin page content.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Excursions</title>
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+<h1>Discover hidden places in the world around you</h1>
+
+<h3> Download Excursion (Coming soon)</h3>
+<!--insert video-->
+<div class="center">
+<video autoplay>
+  <source src="./resources/images/excursion_video.mp4" type="video/mp4">
+  <source src="excursion_video.mp4" type="excursion_video/mp4">
+Your browser does not support the video tag.
+</video>
+</div>
+<h1>Your personal travel guide</h1>
+<div class="tent">
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+<img src="./resources/images/camp.jpg">
+<p>
+<img src="./resources/images/phone.png">"
+</p>
+
+
 
   </body>
 </html>
