with '#' will be ignored, and an empty message aborts the commit.  # On branch master # Changes to be committed: #	modified:   index.html control x :wq

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ Your browser does not support the video tag.
 <img src="./resources/images/camp.jpg">
 <p>
 <img src="./resources/images/phone.png">"
+<h1>Coming Soon for iPhone and Android</h1>
 </p>
+<h3>Download Excursion (Coming soon)</h3>
 
 
 
