--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
 <h1>Discover hidden places in the world around you</h1>
 
-<h3> Download Excursion (Coming soon)</h3>
+
+<h3><a href="#">Download Excursion (Coming soon)</a></h3>
+
 <!--insert video-->
 <div class="center">
 <video autoplay>
@@ -25,7 +27,11 @@ Your browser does not support the video tag.
 <img src="./resources/images/phone.png">"
 <h1>Coming Soon for iPhone and Android</h1>
 </p>
-<h3>Download Excursion (Coming soon)</h3>
+<h3><a href="#">Download Excursion (Coming soon)</a></h3>
+</div>
+<div class="copyright">
+<p>© Excursion</p>
+</div>
 
 
 
